--- a/index.html
+++ b/index.html
@@ -56,22 +56,22 @@ $(document).ready(function ($) {
   <div class="twelve columns">
 
     <div class="row">
-      <div class="nine columns" style="margin-bottom: 10px">
+      <!--div class="nine columns" style="margin-bottom: 10px">
         <ul id="menu-header" class="nav-bar horizontal">
           <li><a href="index.html">Baby Juliette</a></li>
-          <!--li class="has-flyout"> <a href="#">Pages</a><a href="#" class="flyout-toggle"></a>
+          <li class="has-flyout"> <a href="#">Pages</a><a href="#" class="flyout-toggle"></a>
             <ul class="flyout">
               <li class="has-flyout"><a href="products-page.html">Products Page</a></li>
               <li class="has-flyout"><a href="product-single.html">Product Single</a></li>
               <li class="has-flyout"><a href="contact.html">Contact Page</a></li>
             </ul>
           </li>
-          <li ><a href="galleries.html">Galleries</a></li-->
+          <li ><a href="galleries.html">Galleries</a></li>
           <li ><a href="contact.html">Contacto</a></li>
         </ul>
         <script>$('ul#menu-header').nav-bar();</script>
         <div style="clear:both"></div>
-      </div>
+      </div-->
       <div class="three columns"><img src="images/Baby-Shower.png" style="padding-top: 15px" alt="Baby Shower Juliette"></div>
     </div>
 
