--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
 <title>Juliette Baby Shower</title>
 <meta name="viewport" content="width=device-width">
 <meta name="keywords"
-content="tv prime, tvprime, tv privado, tvprivado, primetv, iptv, mexico iptv, iptv mexico, iptv mexicano, iptv latino, contratar iptv, servicio de iptv, firestick, android tv box, tv box, smart tv, smarttv, television en linea, PPV, VOD, livetv, live tv, ">
-<meta property="og:title" content="TV PRIVADO - TV PRIME" />
+content="babyshower">
+<meta property="og:title" content="Juliette Baby Shower" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://privadotv.com/" />
+<meta property="og:url" content="https://babyshowerjuliette.com/" />
 <meta property="og:description"
-content="TV PRIME - TV PRIVADO IPTV LATINO ¡Eventos Deportivos, PPV, Canales Premium, Infantiles 24/7, y mucho más." />
-<meta property="og:image" content="https://privadotv.com/assets/img/tvprivado/og.png" />
+content="Juliette Baby Shower" />
+<meta property="og:image" content="https://babyshowerjuliette.com/images/favicon/og.png" />
 <meta property="og:image:width" content="512" />
 <meta property="og:image:height" content="512" />
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="@CentroRosarito" />
 <meta name="twitter:creator" content="@CentroRosarito" />
-<meta name="twitter:image" content="https://privadotv.com/assets/img/tvprivado/og.png" />
-<meta name="twitter:title" content="TV PRIVADO - TV PRIME"/>
-<meta name="twitter:description" content="TV Privado ¡El mejor contenido premium y VOD!" />
+<meta name="twitter:image" content="https://babyshowerjuliette.com/images/favicon/og.png" />
+<meta name="twitter:title" content="Juliette Baby Shower"/>
+<meta name="twitter:description" content="Juliette Baby Shower" />
 
 <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
@@ -91,16 +91,18 @@ $(document).ready(function ($) {
     </div>
     <div class="row">
       <div class="four columns">
-        <h3>Te esperamos</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc viverra, lacus id interdum ultrices, elit metus semper tellus, vel lacinia libero purus vitae risus. Integer a eros sit amet felis tincidunt commodo.</p>
-        <a class="button round" href="#">More &raquo;</a> </div>
-      <div class="four columns">
         <h3>Comparte con Nosotros</h3>
-        <p>Vivamus tortor tellus, rutrum sit amet mollis vel, imperdiet consectetur orci. Mauris pharetra congue enim, et sagittis lectus congue ut. Cum sociis natoque penatibus et magnis dis parturient montes.</p>
-        <a class="button round" href="#">More &raquo;</a> </div>
+        <p>Estamos encantados de invitarte al Baby Shower de nuestra pequeña Juliette.</p>
+        <p>Queremos compartir este momento contigo. </p>
+        <!--a class="button round" href="#">More &raquo;</a--> </div>
+      <div class="four columns">
+        <!--h3>Te esperamos</h3-->
+        <img src="images/babyowl.png" style="padding-top: 15px" alt="Baby Shower Juliette">
+        <!--a class="button round" href="#">More &raquo;</a--> </div>
       <div class="four columns">
         <h3>Día</h3>
-        <p>Marzo 6 2021<br> 2:00 PM <br> </p>
+        <p>6 de Marzo de 2021 <br> 2:00 p. m. <br> Romualdo Gallardo 1317 <br> Lucio Blanco, Playas de Rosaerito</p>
+        <p>Se ruega confirmación</p>
         <a class="button round" href="https://wa.me/5216618507063?text=Hola%20Baby%20Juliette">WhatsApp &raquo;</a> </div>
     </div>
   </div>
