--- a/index.html
+++ b/index.html
@@ -91,18 +91,17 @@ $(document).ready(function ($) {
     </div>
     <div class="row">
       <div class="four columns">
-        <h3>Comparte con Nosotros</h3>
-        <p>Estamos encantados de invitarte al Baby Shower de nuestra pequeña Juliette.</p>
-        <p>Queremos compartir este momento contigo. </p>
-        <!--a class="button round" href="#">More &raquo;</a--> </div>
-      <div class="four columns">
         <!--h3>Te esperamos</h3-->
         <img src="images/babyowl.png" style="padding-top: 15px" alt="Baby Shower Juliette">
         <!--a class="button round" href="#">More &raquo;</a--> </div>
       <div class="four columns">
+        <h3>Comparte con Nosotros</h3>
+        <p>Se parte de esta celebración que estamos haciendo para la llegada de nuestra querida Juliette.</p>
+        <!--a class="button round" href="#">More &raquo;</a--> </div>
+      <div class="four columns">
         <h3>Día</h3>
-        <p>6 de Marzo de 2021 <br> 2:00 p. m. <br> Romualdo Gallardo 1317 <br> Lucio Blanco, Playas de Rosaerito</p>
-        <p>Se ruega confirmación</p>
+        <p>6 de Marzo de 2021 <br> 2:00 p. m. <br> Romualdo Gallardo 1317 <br> Lucio Blanco, Playas de Rosarito.</p>
+        <p>Confirmar asistencia.</p>
         <a class="button round" href="https://wa.me/5216618507063?text=Hola%20Baby%20Juliette">WhatsApp &raquo;</a> </div>
     </div>
   </div>
