--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@ $(document).ready(function ($) {
     </div>
     <div class="row">
       <div class="four columns">
-        <!--h3>Te esperamos</h3-->
-        <img src="images/babyowl.png" style="padding-top: 15px" alt="Baby Shower Juliette">
+        <h3>Comparte con Nosotros este día inolvidable</h3>
+        <p>Queremos que seas parte de esta celebración que estamos haciendo para la llegada de nuestra querida Juliette.</p>
         <!--a class="button round" href="#">More &raquo;</a--> </div>
       <div class="four columns">
-        <h3>Comparte con Nosotros</h3>
-        <p>Se parte de esta celebración que estamos haciendo para la llegada de nuestra querida Juliette.</p>
+        <!--h3>Te esperamos</h3-->
+        <img src="images/babyowl.png" style="padding-top: 15px" alt="Baby Shower Juliette">
         <!--a class="button round" href="#">More &raquo;</a--> </div>
       <div class="four columns">
         <h3>Día</h3>
