--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ $(document).ready(function ($) {
     <div class="row">
       <div class="four columns">
         <h3>Comparte con Nosotros este día inolvidable</h3>
-        <p>Queremos que seas parte de esta celebración que estamos haciendo para la llegada de nuestra querida Juliette.</p>
+        <p>Acompañanos y se parte de esta celebracion en honor a llegada de nuestra querida Juliette.</p>
         <!--a class="button round" href="#">More &raquo;</a--> </div>
       <div class="four columns">
         <!--h3>Te esperamos</h3-->
